# kagu

./: build.sh  docker-run-scripts.txt  enable-remote.sh  get_pkgs.sh  make  registry.sh  repo-build.sh
arprouter/: Dockerfile
base/: Dockerfile
bgpd/: Dockerfile  bgpd.conf  build.sh  run.sh
bird/: Dockerfile  bird.conf  bird.conf.passive  run.sh
bird2/: Dockerfile  bird.conf  run.sh
frr/: Dockerfile  bgpd.conf  run.sh
ghc/: Dockerfile
ghcup/: Dockerfile
gobgp/: Dockerfile  bird.conf  gobgpd.conf  run.sh
hbgp/: Dockerfile  Sysinfo  bgp.conf  run.sh
kakapo/: Dockerfile  cdump  run.sh
mdserver/: Dockerfile
relay/: Dockerfile  run.sh  run.sh.active  run.sh.passive
stack/: Dockerfile  simple.cabal  stack.yaml
